# momo

./: .gitignore  CLAUDE.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
docs/: research-log.md  tech-debt.md  test-environment-design.md  type-ignore-registry.md
docs/architecture/: ARCHITECTURE_UPDATE_SUMMARY.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md  windows-python-bridge.md
docs/architecture/decisions/: README.md  adr-001-layered-pipeline-architecture.md  adr-002-windows-python-bridge.md  adr-003-parquet-for-data-storage.md  adr-005-structlog-for-logging.md  (+7 more)
docs/archive/: architecture.md  prd.md  project-brief.md  project-idea.md
docs/prd/: checklist-results-report.md  epic-1-foundation-data-infrastructure.md  epic-2-momentum-signal-portfolio-construction.md  epic-3-backtest-engine-performance-analytics.md  epic-4-research-workflow-experimentation-tools.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/project-brief/: appendices.md  constraints-assumptions.md  executive-summary.md  goals-success-metrics.md  index.md  mvp-scope.md  next-steps.md  post-mvp-vision.md  problem-statement.md  proposed-solution.md  risks-open-questions.md  target-users.md  technical-considerations.md
docs/research/: global-momentum-portfolio-construction-methods.md  mometum-portfolio-strategies-research-papers-with-detailed-algos.md  norgate-api-exploration.md  norgate-data-exploration-plan.md  norgatedata-constituents-exploration.md
docs/stories/: 1.1-atomic-commit-plan.md  1.1.story.md  1.2-atomic-commit-plan.md  1.2.story.md  1.3-atomic-commit-plan.md  1.3.story.md  1.4-atomic-commit-plan.md  1.4.story.md
src/momo/: __init__.py
tests/: conftest.py
(+124 files in other folders)
