[project]
name = "momo"
version = "0.1.0"
description = "Momentum strategy backtesting framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core data stack
    "pandas>=2.2,<2.3",
    "numpy>=2.1,<2.2",
    "pyarrow>=18.0,<19.0",

    # Statistics
    "scipy>=1.14,<1.15",
    "statsmodels>=0.14,<0.15",

    # Data source
    "norgatedata>=1.0.74",

    # Visualization
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<0.14",

    # Interactive
    "jupyter>=1.1",
    "jupyterlab>=4.0,<5.0",

    # Logging and utilities
    "structlog>=24.0,<25.0",
    "tenacity>=9.0,<10.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-xdist>=3.5,<4.0",
    "tomli>=2.0,<3.0",  # TOML parsing for test validation

    # Linting and type checking
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "RUF", # Ruff-specific rules
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests/stories"]
python_files = "*.py"
python_functions = "test_*"
markers = [
    "story_1_1: Story 1.1 tests",
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "p0: Priority 0 (critical path)",
    "p1: Priority 1 (high)",
    "p2: Priority 2 (medium)",
    "p3: Priority 3 (low)",
]
